@@ -187,6 +187,27 @@
                 here.</para>
               </listitem>
             </varlistentry>
+
+            <varlistentry>
+              <term>sourceonly</term>
+
+              <listitem>
+                <para>Normally used to specify non-ipsec members in an ipsec
+                zone to implement a Star topology. Specifies that traffic will
+                be received from the specified net(s) but that no traffic will
+                be sent to the net(s).</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term>destonly</term>
+
+              <listitem>
+                <para>Normally used with the Multi-cast range. Specifies that
+                traffic will be sent to the specified net(s) but that no
+                traffic will be received from the net(s).</para>
+              </listitem>
+            </varlistentry>
           </variablelist>
         </listitem>
       </varlistentry>
