@@ -157,7 +157,8 @@ Other changes in Shorewall 4.1.4.
 5)  A new 'sourceonly' OPTION has been added for entries in
     /etc/shorewall/hosts. This option is the opposite of the 'destonly'
     option in that only packets *from* this set of hosts is considered
-    to originate in the specified ZONE.
+    to originate in the specified ZONE. This option is not supported by
+    Shorewall-shell.
 
 Migration Issues.
 
